Adding aliases for release management

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,5 @@ tag_svn_revision = true
 
 [aliases]
 test = nosetests -v --with-coverage --cover-html --cover-package=weekdays
+release = egg_info -RDb "" sdist --formats=gztar,zip bdist_egg bdist_wheel
+release_upload = egg_info -RDb "" sdist --formats=gztar,zip bdist_egg bdist_wheel upload
